Update for new output