@@ -1,5 +1,5 @@
 ///usr/bin/env jbang "$0" "$@" ; exit $?
-//JAVA 16+
+//JAVA 17+
 //DEPS info.picocli:picocli:4.5.0
 
 import picocli.CommandLine;
@@ -13,6 +13,8 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.time.Duration;
+import java.time.LocalTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -23,6 +25,7 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.Callable;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -56,11 +59,8 @@ class analyse implements Callable<Integer>
             .map(this::toJobResult)
             .collect(Collectors.toList());
 
-        jobResults.stream()
-            .map(this::toPhaseCsv)
-            .forEach(this::writeCsvFile);
-
-        writeCsvFile(toTotalCsv(jobResults));
+        writeCsvFile(toTotalCsv(jobResults, tr -> tr.duration.toString()));
+        writeCsvFile(toTotalCsv(jobResults, tr -> String.valueOf(tr.maxRSS)));
         writeCsvFile(toUsedReports(jobResults));
         return 0;
     }
@@ -103,24 +103,23 @@ class analyse implements Callable<Integer>
         return new Csv("native-image-totals", result);
     }
 
-    Csv toTotalCsv(List<JobResult> jobs)
+    Csv toTotalCsv(List<JobResult> jobs, Function<TrialResult, String> extractor)
     {
         final int numJobs = jobs.size();
-        final int numRuns = 10;
+        final int numTrials = 10;
         final AtomicInteger counter = new AtomicInteger();
 
-        final Map<Integer, List<PhaseResult>> totals = jobs.stream()
-            .flatMap(jobResult -> jobResult.phases().stream())
-            .filter(phase -> phase.phase.isTotal())
-            .collect(Collectors.groupingBy(it -> counter.getAndIncrement() / numRuns));
+        final Map<Integer, List<TrialResult>> totals = jobs.stream()
+            .flatMap(job -> job.trialResults.stream())
+            .collect(Collectors.groupingBy(it -> counter.getAndIncrement() / numTrials));
 
-        final List<String> values = IntStream
-            .range(0, numRuns)
+        final List<String> duration = IntStream
+            .range(0, numTrials)
             .mapToObj(i ->
                 IntStream
                     .range(0, numJobs)
                     .mapToObj(j -> totals.get(j).get(i))
-                    .map(p -> p.duration.toMillis())
+                    .map(extractor)
                     .map(String::valueOf)
                     .collect(
                         Collectors.joining(
@@ -129,8 +128,7 @@ class analyse implements Callable<Integer>
                             , ""
                         )
                     )
-            )
-            .collect(Collectors.toList());
+            ).toList();
 
         final String header = jobs.stream()
             .map(JobResult::name)
@@ -138,88 +136,88 @@ class analyse implements Callable<Integer>
 
         List<String> result = new ArrayList<>();
         result.add(header);
-        result.addAll(values);
+        result.addAll(duration);
         return new Csv("native-image-totals", result);
     }
 
-    Csv toPhaseCsv(JobResult job)
-    {
-        final int numPhases = 8;
-        final AtomicInteger counter = new AtomicInteger();
+//    Csv toPhaseCsv(JobResult job)
+//    {
+//        final int numPhases = 8;
+//        final AtomicInteger counter = new AtomicInteger();
+//
+//        final List<Phase> affectsMemory = List.of(Phase.CLASSLIST, Phase.ANALYSIS, Phase.COMPILE, Phase.IMAGE);
+//
+//        final List<String> values = job.phases.stream()
+//            .collect(Collectors.groupingBy(it -> counter.getAndIncrement() / numPhases))
+//            .entrySet()
+//            .stream()
+//            .map(phaseRun ->
+//                String.format(
+//                    "%s,%s,%s"
+//                    , toPhaseTimeCsv(job.name, phaseRun.getKey(), phaseRun.getValue())
+//                    , toPhaseMemoryCsv(job.name, phaseRun.getKey(), phaseRun.getValue(), Phase::notTotal)
+//                    , toPhaseMemoryCsv(job.name, phaseRun.getKey(), phaseRun.getValue(), p -> p.contains(affectsMemory))
+//                )
+//            )
+//            .collect(Collectors.toList());
+//
+//        final String header = job.phases.stream()
+//            .limit(numPhases - 1)
+//            .map(p -> p.phase.toTitle())
+//            .collect(Collectors.joining(",", ",", ",Name"));
+//
+//        final String affectsMemoryHeader = affectsMemory.stream()
+//            .map(Phase::toTitle)
+//            .collect(Collectors.joining(",", ",", ",Name"));
+//
+//        List<String> result = new ArrayList<>();
+//        result.add(String.format("%s,%s,%s", header, header, affectsMemoryHeader));
+//        result.addAll(values);
+//        return new Csv("native-image-phases", result);
+//    }
 
-        final List<Phase> affectsMemory = List.of(Phase.CLASSLIST, Phase.ANALYSIS, Phase.COMPILE, Phase.IMAGE);
+//    private String toPhaseTimeCsv(String name, int run, List<PhaseResult> phases)
+//    {
+//        return phases.stream()
+//            .filter(p -> p.phase.notTotal())
+//            .map(p -> p.duration.toMillis())
+//            .map(String::valueOf)
+//            .collect(
+//                Collectors.joining(
+//                    ","
+//                    , String.format("Run %s,", run + 1)
+//                    , String.format(",%s", name)
+//                )
+//            );
+//    }
 
-        final List<String> values = job.phases.stream()
-            .collect(Collectors.groupingBy(it -> counter.getAndIncrement() / numPhases))
-            .entrySet()
-            .stream()
-            .map(phaseRun ->
-                String.format(
-                    "%s,%s,%s"
-                    , toPhaseTimeCsv(job.name, phaseRun.getKey(), phaseRun.getValue())
-                    , toPhaseMemoryCsv(job.name, phaseRun.getKey(), phaseRun.getValue(), Phase::notTotal)
-                    , toPhaseMemoryCsv(job.name, phaseRun.getKey(), phaseRun.getValue(), p -> p.contains(affectsMemory))
-                )
-            )
-            .collect(Collectors.toList());
-
-        final String header = job.phases.stream()
-            .limit(numPhases - 1)
-            .map(p -> p.phase.toTitle())
-            .collect(Collectors.joining(",", ",", ",Name"));
-
-        final String affectsMemoryHeader = affectsMemory.stream()
-            .map(Phase::toTitle)
-            .collect(Collectors.joining(",", ",", ",Name"));
-
-        List<String> result = new ArrayList<>();
-        result.add(String.format("%s,%s,%s", header, header, affectsMemoryHeader));
-        result.addAll(values);
-        return new Csv("native-image-phases", result);
-    }
-
-    private String toPhaseTimeCsv(String name, int run, List<PhaseResult> phases)
-    {
-        return phases.stream()
-            .filter(p -> p.phase.notTotal())
-            .map(p -> p.duration.toMillis())
-            .map(String::valueOf)
-            .collect(
-                Collectors.joining(
-                    ","
-                    , String.format("Run %s,", run + 1)
-                    , String.format(",%s", name)
-                )
-            );
-    }
-
-    private String toPhaseMemoryCsv(String name, int run, List<PhaseResult> phases, Predicate<Phase> phaseFilter)
-    {
-        return phases.stream()
-            .filter(p -> phaseFilter.test(p.phase))
-            .map(PhaseResult::memory)
-            .map(String::valueOf)
-            .collect(
-                Collectors.joining(
-                    ","
-                    , String.format("Run %s,", run + 1)
-                    , String.format(",%s", name)
-                )
-            );
-    }
+//    private String toPhaseMemoryCsv(String name, int run, List<PhaseResult> phases, Predicate<Phase> phaseFilter)
+//    {
+//        return phases.stream()
+//            .filter(p -> phaseFilter.test(p.phase))
+//            .map(PhaseResult::memory)
+//            .map(String::valueOf)
+//            .collect(
+//                Collectors.joining(
+//                    ","
+//                    , String.format("Run %s,", run + 1)
+//                    , String.format(",%s", name)
+//                )
+//            );
+//    }
 
     JobResult toJobResult(File job)
     {
         final Path jobPath = job.toPath();
         final String jobName = jobPath.getFileName().toString();
+        final Path reportsPath = jobPath.resolve("reports");
+        final long usedClasses = countLines("used_classes", reportsPath);
+        final long usedMethods = countLines("used_methods", reportsPath);
+        final long usedPackages = countLines("used_packages", reportsPath);
         try(Stream<String> lines = Files.lines(jobPath.resolve("console.log")))
         {
-            final List<PhaseResult> phases = toPhases(lines);
-            final Path reportsPath = jobPath.resolve("reports");
-            final long usedClasses = countLines("used_classes", reportsPath);
-            final long usedMethods = countLines("used_methods", reportsPath);
-            final long usedPackages = countLines("used_packages", reportsPath);
-            return new JobResult(jobName, usedClasses, usedMethods, usedPackages, phases);
+            final List<TrialResult> trialResults = toTrialResults(lines);
+            return new JobResult(jobName, usedClasses, usedMethods, usedPackages, trialResults);
         }
         catch (IOException e)
         {
@@ -257,74 +255,63 @@ class analyse implements Callable<Integer>
         }
     }
 
-    private List<PhaseResult> toPhases(Stream<String> lines)
+    private List<TrialResult> toTrialResults(Stream<String> lines)
     {
-        return lines
-            .filter(line -> line.endsWith("GB") && !line.contains("("))
-            .map(this::toPhaseResult)
-            .collect(Collectors.toList());
+        int groupBy = 2;
+        AtomicInteger index = new AtomicInteger(0);
+
+        final Map<Integer, List<String>> rawResults = lines
+            .filter(line -> line.endsWith("wall clock") || line.contains("Maximum resident set size"))
+            .collect(Collectors.groupingBy(ignore -> index.getAndIncrement() / groupBy));
+
+        return rawResults.values().stream()
+            .map(this::toTrialResult)
+            .toList();
     }
 
-    PhaseResult toPhaseResult(String line)
+    TrialResult toTrialResult(List<String> values)
     {
-        final String[] elements = line.split("\\s+");
-        final String phase = elements[1].replaceAll("[\\[\\]:]", "");
-        final String duration = elements[2].replace(",", "");
-        final String memory = elements[4];
-        return new PhaseResult(
-            Phase.valueOf(phase.toUpperCase(Locale.ROOT))
-            , Duration.ofMillis(Math.round(Double.parseDouble(duration)))
-            , Double.parseDouble(memory)
-        );
+        final LocalTime time = LocalTime.parse(lastOf(values.get(0)), DateTimeFormatter.ofPattern("m:ss"));
+        final Duration wallClock = Duration.between(LocalTime.MIN, time);
+
+        final String rssKbytes = lastOf(values.get(1));
+        final double maxRSS = Double.parseDouble(rssKbytes) / 1024 / 1024;
+
+        return new TrialResult(wallClock, maxRSS);
     }
-    
-    static record JobResult(
+
+    String lastOf(String line)
+    {
+        final String[] elems = line.split("\\s+");
+        return elems[elems.length - 1];
+    }
+
+//    String[] toPhaseResult(String line)
+//    {
+//        final String[] elements = line.split("\\s+");
+//        final String phase = elements[1].replaceAll("[\\[\\]:]", "");
+//        final String duration = elements[2].replace(",", "");
+//        final String memory = elements[4];
+//        return new PhaseResult(
+//            Phase.valueOf(phase.toUpperCase(Locale.ROOT))
+//            , Duration.ofMillis(Math.round(Double.parseDouble(duration)))
+//            , Double.parseDouble(memory)
+//        );
+//    }
+
+    record JobResult(
         String name
         , long usedClasses
         , long usedMethods
         , long usedPackages
-        , List<PhaseResult> phases
+        , List<TrialResult> trialResults
     ) {}
 
     /**
      * Duration in milliseconds.
-     * Memory in GB
+     * Max RSS in GB
      */
-    record PhaseResult(Phase phase, Duration duration, double memory) {}
+    record TrialResult(Duration duration, double maxRSS) {}
 
     record Csv(String name, Iterable<String> lines) {}
-
-    enum Phase {
-        CLASSLIST
-        , SETUP
-        , ANALYSIS
-        , UNIVERSE
-        , COMPILE
-        , IMAGE
-        , WRITE
-        , TOTAL
-        ;
-
-        String toTitle()
-        {
-            return this.toString().charAt(0)
-                + this.toString().toLowerCase(Locale.ROOT).substring(1);
-        }
-
-
-        boolean isTotal()
-        {
-            return this == TOTAL;
-        }
-
-        boolean notTotal()
-        {
-            return !isTotal();
-        }
-
-        boolean contains(List<Phase> phases)
-        {
-            return phases.contains(this);
-        }
-    }
 }
